# personal-rag-assistant

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  run.py
app/: main.py
app/config/: config.py  config_instance.py
app/constants/: agentModel.py
app/controllers/: agent_controller.py
app/database/: qdrant.py
app/exceptions/: exceptions.py
app/facade/: ollama_facade.py  open_ai_facade.py  openrouter_facade.py  vertex_facade.py
app/factory/: ai_factory.py
app/instances/: instances_to_inject.py
app/interfaces/: vector_database_interface.py
app/logger/: logger.py
app/middlewares/: request_wrapper.py
app/models/: agent_models.py  ai_agent_models.py  collection.py  data_processing_model.py  field.py  file.py  file_incoming.py  search.py  service_models.py  vector.py
app/services/: agent_chat_services.py  bulk_content_service.py  contex_chatbot.py  data_processing.py  embeddings_service.py  knowledge_service.py  notion_service.py  pre_hook_service.py  prompt_service.py  query_processing.py  sentence_transformer_service.py  vector_db_service.py  vector_db_service_qdrant.py  vertex.py
app/template/: template-conversation.json
app/tools/: type_tools.py
app/util/: prepare_to_insert.py  template.py
