[project]
name = "personal-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
    "aioresponses>=0.7.8",
    "fastapi==0.115.4",
    "google-cloud-aiplatform==1.71.1",
    "gunicorn==23.0.0",
    "httpx>=0.28.1",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "twisted==22.10.0",
    "uvicorn==0.32.0",
    "vertexai>=1.71.1",
    "llama-index",
    "qdrant-client>=1.14.2",
]
